<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProdutoActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_title"
        android:textSize="@dimen/fonte"
        android:layout_margin="@dimen/fab_margin"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <EditText
        android:id="@+id/produto_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/produto_produto"/>
    <EditText
        android:id="@+id/qtde_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/produto_qtde"/>
    <EditText
        android:id="@+id/valor_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/produto_valor"/>
    <Button
        android:id="@+id/btn_print_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green100"
        android:text="@string/btn_print"
        android:background="@color/green600"/>
        <Button
            android:id="@+id/btn_disconect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green100"
            android:text="@string/disconected"
            android:background="@color/green600"
            android:layout_marginTop="@dimen/fab_margin"/>
    </LinearLayout>
</RelativeLayout>